Fixed #6 - Vertical alignement of title

--- a/_less/bootstragram-jumbotron.less
+++ b/_less/bootstragram-jumbotron.less
@@ -23,7 +23,6 @@
     padding: 0;
     margin: 0;
     width: 100%;
-    max-height: 680px;
 
     background-position: center center;
     background-size: cover;
